# Calendifier

./: .coveragerc  .flake8  .gitignore  DEVELOPMENT-README.md  LGPL3_COMPLIANCE_NOTICE.txt  README.md  TESTING.md  api_server.py  build.py  build_flatpak.sh  build_utils.py  builddmg.py  buildexe.py  buildinstaller.py  cleanup_flatpak.sh  dmg_icon.py  generate_icons.py  main.py  pyproject.toml  requirements.txt  stamp_version.py  style_init.py  version.py
assets/: calendar_icon.icns
calendar_app/config/: settings.py  themes.py
calendar_app/core/: calendar_manager.py  event_manager.py  holiday_provider.py  holiday_translations.py  multi_country_holiday_provider.py  observance_data.py  observances.py  recurring_event_generator.py  rrule_parser.py
calendar_app/data/: database.py  models.py
calendar_app/localization/: __init__.py  country_endonyms.py  i18n_manager.py  locale_detector.py  number_formatter.py
calendar_app/shared/: __init__.py  resources.py
calendar_app/ui/: about_dialog.py  calendar_widget.py  clock_widget.py  event_dialog.py  event_panel.py  main_window.py  native_widgets.py  notes_widget.py  rrule_dialog.py  rrule_dialog_pyside.py  settings_dialog.py  splash.py
calendar_app/utils/: font_manager.py  ntp_client.py
docs/: architecture.md  index.html  styles.css  translation-system.md
installer/: __init__.py  app.py  build_payload.py  constants.py
installer/ops/: errors.py  install_ops.py  legacy.py  progress.py  repair_ops.py  running_app.py  shortcuts.py  uninstall_ops.py
installer/shared/: logging_setup.py
installer/state/: registry.py
(+23 files in other folders)
